# theMind

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: theMindV1.drawio.xml  theMindV2.drawio  theMindV3.drawio
src/: client.cpp  main.cpp
src/core/: deck.hpp  game_logic.hpp  game_session.hpp  play_result.hpp  player.hpp
tests/: test_game.cpp
